--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Game/Maps/MainMenu.MainMenu
-GlobalDefaultGameMode=/Game/Game/BP_GameMode.BP_GameMode_C
+GlobalDefaultGameMode=/Game/Game/GameModes/BP_MainMenuGameMode.BP_MainMenuGameMode_C
 EditorStartupMap=/Game/Game/Maps/GameLevel.GameLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
