--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=907D34654ADC469290F01F8CA525E80B
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "3A0E0B784B4C119C97656CBA90DB75A7", "Doomed Sphere")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+ForDistribution=False
+
