--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Game/Maps/MainMenu_old.MainMenu_old
+GameDefaultMap=/Game/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Game/GameModes/BP_MainMenuGameMode.BP_MainMenuGameMode_C
 EditorStartupMap=/Game/Game/Maps/Level1.Level1
 
